Refactor ExpressionParser by extracting tokenization logic into a new ExpressionLexer class.